--- a/bezerra/index.html
+++ b/bezerra/index.html
@@ -84,27 +84,77 @@
 
   <header>
     <nav class="container navbar navbar-expand-md">
-      <a class="navbar-brand" href="#"><img class="bezerra" src="assets/image/Camada 1@2x.png"> <img class="trinta"
-          src="assets/image/DESPOMAR_ICON_30ANOS-01@2x.png"></a>
+      <a class="navbar-brand" href="index.html"><img class="bezerra" src="assets/image/Camada 1.png"> <img
+          class="trinta" src="assets/image/DESPOMAR_ICON_30ANOS-01.png"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <i class="fa fa-bars"></i>
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#inicio"><img src="assets/svg/home-icon-silhouette.svg"> Início</a>
+            <a class="nav-link" href="#inicio"><svg xmlns="http://www.w3.org/2000/svg" width="15.837" height="14.747"
+                viewBox="0 0 15.837 14.747">
+                <g transform="translate(-39.665 -35.842)">
+                  <g transform="translate(39.665 35.842)">
+                    <g transform="translate(0 0)">
+                      <path class="a"
+                        d="M15.572,23.711l-2.4-2.4V18.538a.908.908,0,0,0-1.816,0V19.5L9.569,17.708a2.388,2.388,0,0,0-3.3,0l-6,6A.908.908,0,0,0,1.55,24.995l6-6a.536.536,0,0,1,.735,0l6,6a.908.908,0,1,0,1.284-1.284Z"
+                        transform="translate(-0.001 -17.047)" />
+                      <path class="a"
+                        d="M74.667,127.878a.446.446,0,0,0-.631,0l-5.279,5.277a.447.447,0,0,0-.131.316v3.849a1.636,1.636,0,0,0,1.636,1.636h2.614v-4.048h2.951v4.048H78.44a1.636,1.636,0,0,0,1.635-1.635v-3.849a.445.445,0,0,0-.131-.316Z"
+                        transform="translate(-66.433 -124.209)" />
+                    </g>
+                  </g>
+                </g>
+              </svg> Início</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#sobre"><img src="assets/svg/portfolio.svg"> Sobre</a>
+            <a class="nav-link" href="#sobre"><svg xmlns="http://www.w3.org/2000/svg" width="16.779" height="14.747"
+                viewBox="0 0 16.779 14.747">
+                <path class="a" d="M211,240h2.949v.983H211Zm0,0" transform="translate(-204.085 -232.135)" />
+                <path class="a"
+                  d="M13.613,83.722H10.848v.492a.491.491,0,0,1-.492.492H6.423a.491.491,0,0,1-.492-.492v-.492H3.167a1.473,1.473,0,0,1-1.4-1.008L0,77.41V88.146a1.476,1.476,0,0,0,1.475,1.475H15.3a1.476,1.476,0,0,0,1.475-1.475V77.411l-1.768,5.3A1.473,1.473,0,0,1,13.613,83.722Zm0,0"
+                  transform="translate(0 -74.873)" />
+                <path class="a"
+                  d="M35.319,0H31.386a1.476,1.476,0,0,0-1.475,1.475v.492h-4.1l1.854,5.563a.491.491,0,0,0,.467.336h2.765V7.374a.491.491,0,0,1,.492-.492h3.933a.491.491,0,0,1,.492.492v.492h2.765a.491.491,0,0,0,.467-.336L40.9,1.966h-4.1V1.475A1.476,1.476,0,0,0,35.319,0ZM30.895,1.966V1.475a.492.492,0,0,1,.492-.492h3.933a.492.492,0,0,1,.492.492v.492Zm0,0"
+                  transform="translate(-24.963 0)" />
+              </svg>Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#produtos"><img src="assets/svg/product.svg"> Produtos</a>
+            <a class="nav-link" href="#produtos"><svg xmlns="http://www.w3.org/2000/svg" width="12.017" height="15.508"
+                viewBox="0 0 12.017 15.508">
+                <g transform="translate(1158.186 -191.68)">
+                  <path class="a"
+                    d="M122.147,15.508h10.3a.858.858,0,0,0,.858-.858V4.292a.858.858,0,0,0-.858-.858h-2.575V2.575a2.575,2.575,0,0,0-5.15,0v.858h-2.575a.858.858,0,0,0-.858.858V14.65A.858.858,0,0,0,122.147,15.508Zm4.292-12.933a.858.858,0,0,1,1.717,0v.858h-1.717Zm0,0"
+                    transform="translate(-1279.475 191.68)" />
+                </g>
+              </svg> Produtos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#servicos"><img src="assets/svg/settings.svg"> Serviços</a>
+            <a class="nav-link" href="#servicos"><svg xmlns="http://www.w3.org/2000/svg" width="15.871" height="15.871"
+                viewBox="0 0 15.871 15.871">
+                <path class="a" d="M20.645,18a2.645,2.645,0,1,0,2.645,2.645A2.648,2.648,0,0,0,20.645,18Z"
+                  transform="translate(-12.71 -12.71)" />
+                <path class="a"
+                  d="M15.053,6.172H14.46a6.713,6.713,0,0,0-.664-1.6l.419-.419a.818.818,0,0,0,0-1.156L12.877,1.655a.837.837,0,0,0-1.156,0l-.419.419A6.717,6.717,0,0,0,9.7,1.41V.817A.818.818,0,0,0,8.882,0H6.989a.818.818,0,0,0-.817.817V1.41a6.713,6.713,0,0,0-1.6.664l-.419-.419a.837.837,0,0,0-1.156,0L1.655,2.993a.818.818,0,0,0,0,1.156l.419.419a6.705,6.705,0,0,0-.664,1.6H.817A.818.818,0,0,0,0,6.989V8.881A.818.818,0,0,0,.817,9.7H1.41a6.713,6.713,0,0,0,.664,1.6l-.419.419a.818.818,0,0,0,0,1.156l1.338,1.338a.836.836,0,0,0,1.156,0l.419-.419a6.725,6.725,0,0,0,1.6.664v.593a.818.818,0,0,0,.817.817H8.881a.818.818,0,0,0,.817-.817V14.46a6.713,6.713,0,0,0,1.6-.664l.419.419a.837.837,0,0,0,1.156,0l1.338-1.338a.818.818,0,0,0,0-1.156L13.8,11.3a6.725,6.725,0,0,0,.664-1.6h.593a.818.818,0,0,0,.817-.817V6.989A.818.818,0,0,0,15.053,6.172ZM11.462,7.935A3.527,3.527,0,1,1,7.935,4.408,3.531,3.531,0,0,1,11.462,7.935Z" />
+              </svg> Serviços</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#clientes"><img src="assets/svg/customer.svg">Clientes</a>
+            <a class="nav-link" href="#clientes"><svg xmlns="http://www.w3.org/2000/svg" width="12.957" height="15.404"
+                viewBox="0 0 12.957 15.404">
+                <g transform="translate(-81.36 -33.044)">
+                  <g transform="translate(81.36 33.044)">
+                    <g transform="translate(0 0)">
+                      <path class="a" d="M193.346,34.116a3.494,3.494,0,1,0-3.494-3.494A3.5,3.5,0,0,0,193.346,34.116Z"
+                        transform="translate(-186.868 -27.128)" />
+                      <path class="a"
+                        d="M134.2,187.453h11.269a.843.843,0,0,0,.843-.843,6.478,6.478,0,0,0-12.956,0A.843.843,0,0,0,134.2,187.453Z"
+                        transform="translate(-133.36 -172.05)" />
+                    </g>
+                  </g>
+                </g>
+              </svg> Clientes</a>
           </li>
         </ul>
       </div>
@@ -115,7 +165,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-7">
-          <h1 class="tag-titulo">ENTRE DURABILIDADE E CONFORTO, ESCOLHA OS DOIS</h1>
+          <h1 class="tag-titulo-banner">ENTRE DURABILIDADE E CONFORTO, ESCOLHA OS DOIS</h1>
           <a class="btn botao-vermelho">NOSSOS PRODUTOS</a>
         </div>
         <div class="col-12 col-lg-5">
@@ -131,7 +181,7 @@
         <div class="col-12 col-lg-6">
           <div class="">
             <h5 class="tag-secao">SOBRE NÓS</h5>
-            <h2 class="tag-subtitulo">A BEZERRA FARDAMENTOS</h2>
+            <h2 class="tag-subtitulo">A BEZERRA<br>FARDAMENTOS</h2>
             <p class="tag-texto">A Bezerra Fardamentos, Bolsas e Brindes é uma empresa que tem mais de 30 anos no
               mercado com Fábrica Própria, atendendo a região de Feira de Santana - Bahia e todo o território Nascional.
             </p>
@@ -141,7 +191,7 @@
         </div>
         <div class="col-12 col-lg-6">
           <div class="imagem">
-            <img src="assets/image/shutterstock-524051263@2x.png">
+            <img src="assets/image/shutterstock-524051263.png">
           </div>
         </div>
       </div>
@@ -156,7 +206,7 @@
       <div id="owl-produtos" class="owl-carousel owl-theme">
         <div class="item">
           <div class="quadro-foto">
-            <img src="assets/image/Agrupar 2@2x.png">
+            <img src="assets/image/Agrupar 2.png">
             <div class="linha">
               <svg height="25" width="50">
                 <polygon points="0,20 30, 20 15, 0" />
@@ -168,7 +218,7 @@
 
         <div class="item">
           <div class="quadro-foto">
-            <img src="assets/image/Sem Título-2@2x.png">
+            <img src="assets/image/Sem Título-2.png">
             <div class="linha">
               <svg height="25" width="50">
                 <polygon points="0,20 30, 20 15, 0" />
@@ -180,7 +230,7 @@
 
         <div class="item">
           <div class="quadro-foto">
-            <img src="assets/image/squeeze@2x.png">
+            <img src="assets/image/squeeze.png">
             <div class="linha">
               <svg height="25" width="50">
                 <polygon points="0,20 30, 20 15, 0" />
@@ -192,7 +242,7 @@
 
         <div class="item">
           <div class="quadro-foto">
-            <img src="assets/image/Agrupar 2@2x.png">
+            <img src="assets/image/Agrupar 2.png">
             <div class="linha">
               <svg height="25" width="50">
                 <polygon points="0,20 30, 20 15, 0" />
@@ -204,7 +254,7 @@
 
         <div class="item">
           <div class="quadro-foto">
-            <img src="assets/image/Sem Título-2@2x.png">
+            <img src="assets/image/Sem Título-2.png">
             <div class="linha">
               <svg height="25" width="50">
                 <polygon points="0,20 30, 20 15, 0" />
@@ -216,7 +266,7 @@
 
         <div class="item">
           <div class="quadro-foto">
-            <img src="assets/image/squeeze@2x.png">
+            <img src="assets/image/squeeze.png">
             <div class="linha">
               <svg height="25" width="50">
                 <polygon points="0,20 30, 20 15, 0" />
@@ -321,35 +371,35 @@
       <div id="owl-clientes" class="owl-carousel owl-theme">
 
         <div class="item">
-          <img src="assets/image/1@2x.png">
+          <img src="assets/image/1.png">
         </div>
 
         <div class="item">
-          <img src="assets/image/seabra@2x.png">
+          <img src="assets/image/seabra.png">
         </div>
 
         <div class="item">
-          <img src="assets/image/BEto@2x.png">
+          <img src="assets/image/BEto.png">
         </div>
 
         <div class="item">
-          <img src="assets/image/cerb@2x.png">
+          <img src="assets/image/cerb.png">
         </div>
 
         <div class="item">
-          <img src="assets/image/1@2x.png">
+          <img src="assets/image/1.png">
         </div>
 
         <div class="item">
-          <img src="assets/image/seabra@2x.png">
+          <img src="assets/image/seabra.png">
         </div>
 
         <div class="item">
-          <img src="assets/image/BEto@2x.png">
+          <img src="assets/image/BEto.png">
         </div>
 
         <div class="item">
-          <img src="assets/image/cerb@2x.png">
+          <img src="assets/image/cerb.png">
         </div>
 
       </div>
@@ -361,12 +411,12 @@
       <h2 class="tag-subtitulo">FIQUE POR DENTRO!</h2>
 
       <div class="imagens">
-        <img src="assets/image/1@2x (2).png">
-        <img src="assets/image/2@2x.png">
-        <img src="assets/image/3@2x.png">
-        <img src="assets/image/4@2x.png">
-        <img src="assets/image/5@2x.png">
-        <img src="assets/image/Sem Título-1@2x.png">
+        <img src="assets/image/1 (2).png">
+        <img src="assets/image/2.png">
+        <img src="assets/image/3.png">
+        <img src="assets/image/4.png">
+        <img src="assets/image/5.png">
+        <img src="assets/image/Sem Título-1.png">
       </div>
 
       <div class="linha-instagram">
@@ -383,7 +433,7 @@
       <div class="row">
         <div class="col-12 col-lg-6">
           <div class="coluna1">
-            <h1 class="titulo">
+            <h1 class="tag-titulo">
               Nos<br>encontre
             </h1>
             <a class="btn botao-vermelho">ONDE ESTAMOS</a>
@@ -395,22 +445,24 @@
             <!-- Formulário Exemplo -->
             <form name="formValidate" class="formValidate form ajaxForm" method="post" action="">
               <div class="form-group">
-                <input type="text" class="form-control required" name="nome" id="nome" placeholder="Nome">
+                <label class="tag-legenda">Nome*</label>
+                <input type="text" class="form-control required" name="nome" id="nome">
               </div>
               <div class="form-group">
-                <input type="tel" class="form-control js-phoneMask required" name="telefone" id="telefone"
-                  placeholder="Telefone">
+                <label class="tag-legenda">Telefone*</label>
+                <input type="tel" class="form-control js-phoneMask required" name="telefone" id="telefone">
               </div>
               <div class="form-group">
-                <input type="email" class="form-control email required" name="email" id="email" placeholder="E-mail">
+                <label class="tag-legenda">E-mail*</label>
+                <input type="email" class="form-control email required" name="email" id="email">
               </div>
               <div class="form-group">
-                <textarea class="form-control required" name="mensagem" id="mensagem" placeholder="Mensagem"
-                  rows="3"></textarea>
+                <label class="tag-legenda">Mensagem*</label>
+                <textarea class="form-control required" name="mensagem" id="mensagem" rows="3"></textarea>
               </div>
               <div class="form-group">
                 <input name="email_destinatario" type="hidden" value="suporte@linceweb.com.br">
-                <button type="submit" class="btn btn-success">Enviar mensagem</button>
+                <button type="submit" class="btn botao-vermelho">Enviar mensagem</button>
               </div>
             </form>
           </div>
