Adição de hover

--- a/bezerra/index.html
+++ b/bezerra/index.html
@@ -547,12 +547,12 @@
             Redes sociais
           </h6>
           <div class="redes-sociais">
-            <div class="rede">
+            <a href="javascript:;" class="rede">
               <img src="assets/svg/instagram (1).svg">
-            </div>
-            <div class="rede">
+            </a>
+            <a href="javascript:;" class="rede">
               <img src="assets/svg/facebook.svg">
-            </div>
+            </a>
           </div>
         </div>
       </div>
