autoplayHoverPause: true em Owl Carousel

--- a/bezerra/index.html
+++ b/bezerra/index.html
@@ -658,7 +658,8 @@
       loop: true,
       margin: 10,
       autoplay: true,
-      autoplayTimeout: 2500,
+      autoplayTimeout: 3000,
+      autoplayHoverPause: true,
       responsiveClass: true,
       responsive: {
         0: {
@@ -686,7 +687,8 @@
       loop: true,
       margin: 10,
       autoplay: true,
-      autoplayTimeout: 2500,
+      autoplayTimeout: 3000,
+      autoplayHoverPause: true,
       responsiveClass: true,
       responsive: {
         0: {
@@ -714,7 +716,8 @@
       loop: true,
       margin: 10,
       autoplay: true,
-      autoplayTimeout: 2500,
+      autoplayTimeout: 3000,
+      autoplayHoverPause: true,
       responsiveClass: true,
       responsive: {
         0: {
@@ -747,8 +750,8 @@
       loop: true,
       margin: 10,
       autoplay: true,
-      autoplayTimeout: 2500,
-      responsiveClass: true,
+      autoplayTimeout: 5000,
+      autoplayHoverPause: true,
       responsive: {
         0: {
           items: 1,
