--- a/bezerra/index.html
+++ b/bezerra/index.html
@@ -402,7 +402,7 @@
         </div>
 
         <div class="item">
-          <img src="assets/image/1.png">
+          <img src="assets/image/kibon.png">
         </div>
 
         <div class="item">
